<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware" Id="{001e16b0-c959-4c2c-800c-e6b7ef5ebc23}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	robot3 : RobotA22;
	robot4 : RobotA22;
	
	benderA22Left : FoldingMachine;
	
	skidA22Left : SkidMagazine;
	skidA22Right : SkidMagazine;
	magazineA22Left : SkidMagazine;
	magazineA22Right : SkidMagazine;
	
	wrapperA22 : WrapMachine;
	
	verticalDriveA22Left : ClearLinkMC := (
		homingDirection := TRUE, 
		maxSeparation := 1000, 
		limitSensorDefaultState := TRUE);
	horizontalDriveA22Left : ServoNC := (
		limitSensorDefaultState := TRUE);
		
	verticalDriveA22Right : ClearLinkMC := (
		homingDirection := TRUE, 
		maxSeparation := 1000, 
		limitSensorDefaultState := TRUE);
	horizontalDriveA22Right : ServoNC := (
		limitSensorDefaultState := TRUE);
		
	pistonA22Bottom : SimplePiston;
	
	(*
	each of these suction arrays are composed of 3 suction pads
	[1] - top/bottom
	[2] - corner
	[3] - side
	*)
	suctionA22TopLeft : ARRAY[1..3] OF SuctionPad;
	suctionA22TopRight : ARRAY[1..3] OF SuctionPad;
	suctionA22BottomLeft : ARRAY[1..3] OF SuctionPad; 
	suctionA22BottomRight : ARRAY[1..3] OF SuctionPad;
	
	//bottom piston suctions, may not exist
	suctionA22Bottom : ARRAY[1..2] OF SuctionPad;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>